# django-heavy-water

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
django_heavy_water/: __init__.py  app_settings.py  apps.py
django_heavy_water/management/commands/: setup_dev_data.py
heavy_water/: __init__.py  app_settings.py  apps.py  fixtures.py
heavy_water/management/commands/: heavy_water.py
src/heavy_water/: __init__.py  app_settings.py  apps.py  fixtures.py  settings.py
src/heavy_water/management/commands/: heavy_water.py
