[tool.poetry]
name = "django-heavy-water"
version = "0.1.0"
description = ""
authors = ["Josh Asplund <joshasplund@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6"
Django = ">=3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
