[tool.poetry]
name = "django-heavy-water"
version = "0.1.0"
description = ""
authors = ["Josh Asplund <joshasplund@gmail.com>"]
repository = "https://github.com/joshuata/django-heavy-water"
packages = [
    { include = "heavy_water" },
]

[tool.poetry.dependencies]
python = ">=3.6.2"
Django = ">=3.0"

[tool.poetry.dev-dependencies]
mypy = "*"
mypy-extensions = "*"
django-stubs = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
